<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gyakuenki</name>
  <version>0.0.0</version>
  <description>Inverse Perspective Mapping package for soccer legacy code.</description>
  <maintainer email="hanunshaka02@gmail.com">Hanun Shaka</maintainer>
  <license>MIT License</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ipm_library</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>soccer_vision_2d_msgs</exec_depend>
  <exec_depend>soccer_vision_3d_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>ninshiki_interfaces</exec_depend>
  <exec_depend>gyakuenki_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
